--- a/app/components/navbar/navbar.module.scss
+++ b/app/components/navbar/navbar.module.scss
@@ -1,14 +1,20 @@
 .navbar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-    cursor: pointer;
-    font-weight: 700;
-    font-size: 15px;
-    height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 15px;
+  height: 40px;
 
-    :hover {
-        opacity: 0.8;
-    }
+  :hover {
+    opacity: 0.8;
+  }
+}
+
+@media (max-width: 1024px) {
+  .navbar {
+    display: none;
+  }
 }
